# learn_bevy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: comps_n_resources.rs  events.rs  lib.rs  main.rs  map.rs  plugins.rs  resources.rs  states.rs  systems.rs
src/components/: bundles.rs  common.rs  enemy.rs  general.rs  mod.rs  player.rs
src/systems/: bullets.rs  collisions.rs  cursor.rs  debug.rs  enemy.rs  healthbar.rs  input.rs  map.rs  mod.rs  movement.rs  player.rs  setup.rs  ui.rs
src/systems/setup/: map.rs  player_enemies.rs
